--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^2.2.1",
     "next": "10.0.6",
+    "postcss": "^8.2.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
